[package]
name = "spectral_decay"
version = "0.1.0"
authors = ["David Lu <davidelu93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realfft = "0.4.0"
rustfft = "5.0.0"
random-fast-rng = "0.1.1"
baseplug = { git = "https://github.com/wrl/baseplug", branch = "trunk" }
serde = "1.0.118"

[dev-dependencies]

[lib]
# this needs to be commented out to run examples and tests
crate-type = ["cdylib"]
